--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@dfinity/agent": "^0.18.1",
     "@dfinity/candid": "^0.18.1",
-    "@dfinity/principal": "^0.18.1"
+    "@dfinity/principal": "^0.18.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "assert": "2.0.0",
@@ -31,6 +33,8 @@
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
     "terser-webpack-plugin": "^5.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
     "util": "0.12.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
