--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@dfinity/agent": "^0.18.1",
     "@dfinity/candid": "^0.18.1",
     "@dfinity/principal": "^0.18.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
